--- a/css/contact.css
+++ b/css/contact.css
@@ -17,25 +17,25 @@
     font-size: 2.25rem;
     font-weight: bold;
     color: #111827;
-    padding-bottom: 16px;
 }
 
 .contact-text {
     font-size: 20px;
     color: #6D7280;
-    padding-bottom: 20px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
-.contact-button a {
+.contact-button button {
     text-decoration: none;
     background-color: black;
     color: white;
     cursor: pointer;
-    padding: 15px 20px;
+    padding: 10px 20px;
     border-radius: 6px;
 }
 
-.contact-button a:hover {
+.contact-button button:hover {
     transition: 0.3s ease;
     background-color: rgb(58, 58, 58);
 }
