--- a/css/benefit.css
+++ b/css/benefit.css
@@ -80,11 +80,11 @@
     padding: 0px 20px;
     align-self: stretch;
     grid-row: 2fr;
-    grid-column: 1/ span 2;
+    grid-column: 1 / span 2;
     align-items: center;
-    justify-content: center; /* Menjaga posisi gambar di tengah */
+    justify-content: center;
     gap: 50px;
-    margin-top: 20px; /* Menambahkan jarak dari elemen sebelumnya */
+    margin-top: 20px;
     /* background-color: rgb(106, 0, 255); */
   }
   
@@ -99,11 +99,7 @@
     align-items: center;
   }
   
-  .image-box-1::before {
-    content: "🖼";
-    font-size: 2rem;
-    color: #aaa;
-  }
+
   .image-box-2 {
     width: 251px;
     height: 191px;
@@ -115,11 +111,8 @@
     align-items: center;
   }
   
-  .image-box-2::before {
-    content: "🖼";
-    font-size: 2rem;
-    color: #aaa;
-  }
+
+
   .image-box-3 {
     width: 251px;
     height: 191px;
@@ -131,11 +124,7 @@
     align-items: center;
   }
   
-  .image-box-3::before {
-    content: "🖼";
-    font-size: 2rem;
-    color: #aaa;
-  }
+
   .image-box-4 {
     width: 251px;
     height: 191px;
@@ -146,9 +135,12 @@
     justify-content: center;
     align-items: center;
   }
-  
-  .image-box-4::before {
-    content: "🖼";
-    font-size: 2rem;
-    color: #aaa;
+  .image-box-1 img,
+  .image-box-2 img,
+  .image-box-3 img,
+  .image-box-4 img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Sesuaikan ukuran gambar tanpa merusak proporsi */
+      border-radius: 8px;
   }
