--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,6 +3,7 @@
 .navbar *{
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 600;
+    font-size: 14px;
 }
 
 .navbar i {
@@ -24,7 +25,7 @@
     padding: 10px 112px; /* Increased padding for left and right */
 }
 .navbar .logo img {
-    height: 60px;
+    height: 50px;
 }
 
 .navbar .menu {
