--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 40vh;
+    margin: 100px 0px;
 }
 
 .contact-parent {
@@ -10,8 +11,51 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 1216px;
+    height: 310px;
+    background-image: url(../img/contact-banner.png);
+    z-index: 5;
+    position: relative;
 }
+
+.whatsapp-container{
+    width: 335px;
+    height: 86px;
+    border-radius: 16px;
+    background-color: rgba(255, 255, 255, 0.85);
+    z-index: 100;
+    position: absolute;
+
+    left: 1100px;
+    margin-top: 223px;
+    filter: drop-shadow(4px 4px 50px rgba(204, 250, 221, 0.7));
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 16px;
+}
+
+.whatsapp-container .text{
+    font-size: 16px;
+    font-weight: 400;
+    color: #1F2937;
+}
+
+.whatsapp-container img {
+    width: 60px; /* Adjust this value as needed */
+    height: 60px; /* Adjust this value as needed */
+    margin-top: 10px;
+    transition: all 0.3s ease;
+}
+
+.whatsapp-container img:hover{
+    width: 65px; /* Adjust this value as needed */
+    height: 65px; /* Adjust this value as needed */
+    margin-top: 0px;
+    filter: drop-shadow(4px 4px 50px rgb(150, 253, 188));
+}
+
 
 .contact-title {
     font-size: 2.25rem;
@@ -28,16 +72,20 @@
 
 .contact-button button {
     text-decoration: none;
-    background-color: black;
-    color: white;
+    background-color: #FFCC00;
+    color: #111827;
     cursor: pointer;
-    padding: 10px 20px;
-    border-radius: 6px;
+    padding: 12px 20px;
+    border-radius: 16px;
+    border: none;
+    transition: all 0.3s ease;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .contact-button button:hover {
     transition: 0.3s ease;
-    background-color: rgb(58, 58, 58);
+    background-color: rgb(226, 181, 2);
 }
 
 @media (max-width: 768px) {
