--- a/css/hero.css
+++ b/css/hero.css
@@ -74,7 +74,7 @@
 
 .hero-text-button button:hover {
     
-    background-color: #FFCC00;
+    background-color: #0c8d6d;
 }
 
 /* .hero-text-button {
