temporary fix waposition

--- a/css/contact.css
+++ b/css/contact.css
@@ -26,7 +26,7 @@
     z-index: 100;
     position: absolute;
 
-    left: 1100px;
+    right: 8%;
     margin-top: 223px;
     filter: drop-shadow(4px 4px 50px rgba(204, 250, 221, 0.7));
 
