--- a/css/class.css
+++ b/css/class.css
@@ -1,14 +1,8 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f4f8;
-}
-
 .header {
     text-align: center;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 10px;
+    margin-top: 50px;
+    /* margin-bottom: 20px; */
 }
 
 .header h1 {
@@ -24,9 +18,10 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 20px;
+    margin-bottom: -50px;
 }
 
 .content {
@@ -46,7 +41,7 @@ body {
 }
 
 .content .left img {
-    width: 250px;
+    width: 350px;
     margin: 10px;
 }
 
@@ -105,6 +100,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    margin-bottom: -10px;
 }
 
 .content2 {
@@ -175,7 +171,7 @@ body {
 }
 
 .content2 .left2 img {
-    width: 250px;
+    width: 350px;
     margin: 10px;
 }
 
