--- a/css/hero.css
+++ b/css/hero.css
@@ -53,7 +53,7 @@
     padding-bottom: 16px;
 }
 
-.hero-text-button button {
+.hero-text-button a {
     text-decoration: none;
     background-color: #0EA781;
     color: #F9FAFB;
