--- a/css/class.css
+++ b/css/class.css
@@ -13,12 +13,13 @@ body {
 
 h1 {
     color: #333;
+    margin: 10px 10px 5px 10px;
 }
 
 .tabs {
     display: flex;
     justify-content: center;
-    margin-bottom: 10px;
+    margin: 15px 10px 15px 10px;
     border: 1px solid #00b894;
     border-radius: 10px;
 }
