--- a/css/alumni.css
+++ b/css/alumni.css
@@ -72,7 +72,7 @@
     height: 50px;
     border-radius: 50%;
     border: none;
-    background: linear-gradient(135deg, #515851, #8BC34A); 
+    background:#c0ffef ;
     color: white;
     font-size: 20px;
     display: flex;
