--- a/css/alumni.css
+++ b/css/alumni.css
@@ -60,9 +60,11 @@
 }
 
 .alumni-card {
-    flex: 0 0 calc(33.33% - 10px); 
+    /* flex: 0 0 calc(33.33% - 10px);  */
     margin-right: 10px;
     padding: 10px; 
+    justify-content: center;
+    justify-items: center;
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
