--- a/css/alumni.css
+++ b/css/alumni.css
@@ -65,8 +65,8 @@
     padding: 10px; 
     justify-content: center;
     justify-items: center;
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    /* border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  */
 }
 
 .carousel-button {
