--- a/css/activity.css
+++ b/css/activity.css
@@ -58,6 +58,11 @@
     padding: 10px 20px;
     border-radius: 10px;
     text-decoration: none;
+    transform: 0.3s ease;
+}
+
+.activity-col-1 a:hover {
+  filter: brightness(0.95);
 }
 
 
@@ -111,5 +116,10 @@
     color: #1BC89D;
     text-decoration: none;
     font-weight: bold;
+    transform: 0.2 ease;
+  }
+  
+  .card-link:hover {
+    filter: brightness(0.9);
   }
   
