--- a/css/alumni.css
+++ b/css/alumni.css
@@ -64,7 +64,7 @@
     margin-right: 10px;
     padding: 10px; 
     border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    background-color: none;
 }
 
 .carousel-button {
@@ -72,19 +72,20 @@
     height: 50px;
     border-radius: 50%;
     border: none;
-    background: linear-gradient(135deg, #515851, #8BC34A); 
-    color: white;
+    background: #CCFADD;
+    color: black;
     font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     transition: transform 0.2s, box-shadow 0.2s;
+    text-decoration: none;
 }
 
 .carousel-button:hover {
     transform: scale(1.1); 
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); 
 }
 
 .carousel-button:active {
