--- a/css/news-detail.css
+++ b/css/news-detail.css
@@ -102,6 +102,11 @@
     color: #1BC89D;
     text-decoration: none;
     font-weight: bold;
+    transform: 0.2 ease;
+  }
+  
+  .card-link:hover {
+    filter: brightness(0.9);
   }
 
   .card-content .event-text p {
