--- a/css/alumni.css
+++ b/css/alumni.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
+    margin: 120px 0px;
 }
 
 .alumni-parent {
@@ -25,9 +26,10 @@
 }
 
 .alumni-row-title {
-    color: #111827;
+    color: #0EA781;
     font-weight: bold;
     font-size: 2.5rem;
+    padding-bottom: 16px;
 }
 
 .alumni-row-text {
