--- a/css/contact.css
+++ b/css/contact.css
@@ -75,11 +75,11 @@
 
 .contact-button a {
     text-decoration: none;
-    background-color: #FFCC00;
-    color: #111827;
+    background-color: #0EA781;
+    color: white;
     cursor: pointer;
     padding: 12px 20px;
-    border-radius: 16px;
+    border-radius: 12px;
     border: none;
     transition: all 0.3s ease;
     font-weight: 600;
